--- a/mrTPage.html
+++ b/mrTPage.html
@@ -769,7 +769,7 @@
 
   <main class="main-content" id="projects-content">
     <section class="iframe-section">
-      <iframe src="https://drive.google.com/embeddedfolderview?id=1eICQIoBJ84iPyQ4TpaLQdMv48AQo1F5v" class="practice-iframe"></iframe>
+      <iframe src="https://drive.google.com/embeddedfolderview?id=1eICQIoBJ84iPyQ4TpaLQdMv48AQo1F5v#grid" class="practice-iframe"></iframe>
     </section>
   </main>
 
