--- a/mrTPage.html
+++ b/mrTPage.html
@@ -570,6 +570,221 @@
       scrollbar-color: rgba(0, 0, 0, 0.15) transparent;
     }
 
+    /* Global Scrollbar Styling */
+    ::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border-radius: 10px;
+      border: 2px solid transparent;
+      background-clip: padding-box;
+      box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.1);
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: rgba(255, 255, 255, 0.3);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+    }
+
+    body.light-mode ::-webkit-scrollbar-thumb {
+      background: rgba(0, 0, 0, 0.15);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.05);
+    }
+
+    body.light-mode ::-webkit-scrollbar-thumb:hover {
+      background: rgba(0, 0, 0, 0.25);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+    }
+
+    /* Firefox scrollbar */
+    * {
+      scrollbar-width: thin;
+      scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
+    }
+
+    body.light-mode * {
+      scrollbar-color: rgba(0, 0, 0, 0.15) transparent;
+    }
+
+    /* Mobile Responsive (phones only) */
+    @media (max-width: 768px) {
+      body {
+        overflow: hidden;
+      }
+
+      .navbar {
+        top: auto;
+        bottom: 1rem;
+        left: 1rem;
+        right: 1rem;
+        width: calc(100% - 2rem);
+        height: auto;
+        border-radius: 10px;
+        flex-direction: row;
+        padding: 0.75rem 0;
+      }
+
+      .navbar__menu {
+        flex-direction: row;
+        width: 100%;
+        padding: 0;
+      }
+
+      .navbar__item {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .navbar__link {
+        width: 2.75rem;
+        height: 2.75rem;
+        border-radius: 50%;
+      }
+
+      .navbar__link svg {
+        width: 18px;
+        height: 18px;
+      }
+
+      .navbar__link span {
+        display: none;
+      }
+
+      .theme-toggle {
+        width: 18px;
+        height: 18px;
+      }
+
+      .theme-toggle svg {
+        width: 18px;
+        height: 18px;
+      }
+
+      .main-content {
+        margin: 1rem;
+        margin-bottom: calc(1rem + 2.75rem + 1.5rem);
+      }
+
+      .main-content.active {
+        flex-direction: column;
+        gap: 1rem;
+        height: calc(100vh - 3rem - 2.75rem - 1.5rem);
+      }
+
+      .calendar-section {
+        flex: 1;
+        min-height: 0;
+      }
+
+      .todo-sidebar {
+        width: 100%;
+        max-height: 350px;
+        flex: 0 0 auto;
+      }
+
+      .calendar-header h2 {
+        font-size: 1.25rem;
+      }
+
+      .calendar-day {
+        font-size: 0.75rem;
+      }
+
+      .calendar-day-label {
+        font-size: 0.75rem;
+        padding: 0.5rem;
+      }
+
+      #help-content > section > div {
+        padding: 1rem;
+      }
+
+      #help-content h1 {
+        font-size: 1.5rem !important;
+      }
+
+      #help-content h2 {
+        font-size: 1.25rem !important;
+      }
+
+      #help-content h3 {
+        font-size: 1.1rem !important;
+      }
+
+      #help-content p,
+      #help-content li {
+        font-size: 0.875rem !important;
+      }
+    }
+
+    /* Tablet Responsive (iPad) */
+    @media (min-width: 769px) and (max-width: 1024px) {
+      .main-content.active {
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      .calendar-section {
+        flex: 1;
+        min-height: 0;
+        padding: 1.25rem;
+      }
+
+      .calendar-header h2 {
+        font-size: 1.35rem;
+      }
+
+      .calendar-day {
+        font-size: 0.8rem;
+      }
+
+      .calendar-day-label {
+        font-size: 0.8rem;
+        padding: 0.65rem;
+      }
+
+      .todo-sidebar {
+        width: 100%;
+        max-height: 400px;
+        flex: 0 0 auto;
+        padding: 1.25rem;
+      }
+
+      .todo-header h3 {
+        font-size: 1.1rem;
+      }
+
+      .todo-text {
+        font-size: 0.8rem;
+      }
+
+      .todo-event-time {
+        font-size: 0.7rem;
+      }
+
+      .calendar-info {
+        font-size: 0.8rem;
+      }
+
+      .calendar-sync-text {
+        font-size: 0.7rem;
+      }
+    }
+
     .google-signin-btn {
       display: flex;
       align-items: center;
@@ -769,13 +984,13 @@
 
   <main class="main-content" id="projects-content">
     <section class="iframe-section">
-      <iframe src="https://drive.google.com/embeddedfolderview?id=1eICQIoBJ84iPyQ4TpaLQdMv48AQo1F5v#grid" class="practice-iframe"></iframe>
+      <iframe src="https://drive.google.com/embeddedfolderview?id=1eICQIoBJ84iPyQ4TpaLQdMv48AQo1F5v" class="practice-iframe"></iframe>
     </section>
   </main>
 
   <main class="main-content" id="help-content">
-    <section class="iframe-section sheet-music-section" id="privacy-policy">
-      <div style="padding: 2rem; overflow-y: auto; height: 100%;">
+    <section class="iframe-section" style="overflow: hidden;">
+      <div style="padding: 2rem; overflow-y: auto; height: 100%; position: relative;">
         <div style="max-width: 800px; margin: 0 auto;">
           <h1 style="color: #fff; font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Welcome to The Choral Dashboard</h1>
           <div style="color: #fff; line-height: 1.6; font-size: 0.95rem;">
@@ -970,12 +1185,21 @@
           document.getElementById('handbook-content').classList.remove('active');
           document.getElementById('projects-content').classList.remove('active');
           document.getElementById('help-content').classList.add('active');
+          // MOBILE FIX: Show help-content when navigating to it
+          if (window.innerWidth <= 768) {
+            document.getElementById('help-content').style.display = 'flex';
+          }
         } else {
           homeContent.classList.remove('active');
           document.getElementById('practice-content').classList.remove('active');
           document.getElementById('handbook-content').classList.remove('active');
           document.getElementById('projects-content').classList.remove('active');
           document.getElementById('help-content').classList.remove('active');
+        }
+        
+        // MOBILE FIX: Force hide help-content when not active
+        if (window.innerWidth <= 768 && page !== 'help') {
+          document.getElementById('help-content').style.display = 'none';
         }
       });
     });
